# bonfire-cicd

./: .pre-commit-config.yaml  README.md  entry_points.txt  setup.cfg
bonfire_cicd/: __init__.py  build.py  deploy.py  smoke_tests.py  utils.py
bonfire_cicd/clients/: container.py  openshift.py  utils.py
