[flake8]
max-line-length = 100
max-complexity = 10

[metadata]
name = bonfire_cicd
maintainer = psegedy

[options]
entry_points = file:entry_points.txt
packages = find:
include_package_data = True
setup_requires=setuptools_scm
install_requires =
    attrs
    crc-bonfire
    docker
    invoke
    podman

[options.extras_require]
dev =
  flake8
  mccabe
  pre-commit
  pylint
  mypy
